# compiladores-t0

./: .gitignore  INSTRUCOES.md  README.md  pyproject.toml
.exercicio_zero/: configure
.github/workflows/: grade.yml
features/: listas.feature
features/steps/: listas.py
src/: zero.py
src/compiladores_t0.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
